<resources>
    <string name="app_name">MadarSoftTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="add">Add</string>
    <string name="please_enter_all_data">Please Enter All Data</string>
    <string name="invalid_age">Please Enter Valid Age</string>
    <string name="users">Users</string>
    <string name="no_users_available">No Users Available</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_add_successfully">User Add Successfully</string>

    <array name="genders">
        <item>Male</item>
        <item>Female</item>

    </array>
</resources>